tests/proxy-configuration-envoy.yaml
layered_runtime:
  layers:
    - name: static_layer_0
      static_layer:
        re2:
          max_program_size:
            error_level: 187
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                http_filters:
                  - name: envoy.filters.http.local_ratelimit
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                      stat_prefix: http_local_rate_limiter
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: 7B5zIqmRGXmrJTFmKa99-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 1
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: QzVV6y1EmQFbbxOfRCwy-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 1
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: mGcjH8Fv6U9y3BVF9H3Y-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 1
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: 7B5zIqmRGXmrJTFmKa99-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 2
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: QzVV6y1EmQFbbxOfRCwy-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 2
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: mGcjH8Fv6U9y3BVF9H3Y-b
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 2
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: 7B5zIqmRGXmrJTFmKa99-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 3
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: QzVV6y1EmQFbbxOfRCwy-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 3
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: mGcjH8Fv6U9y3BVF9H3Y-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 3
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: 7B5zIqmRGXmrJTFmKa99-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 4
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: QzVV6y1EmQFbbxOfRCwy-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 4
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: mGcjH8Fv6U9y3BVF9H3Y-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 4
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: 7B5zIqmRGXmrJTFmKa99-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 5
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: QzVV6y1EmQFbbxOfRCwy-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 5
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: mGcjH8Fv6U9y3BVF9H3Y-b
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 5
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: qmFm7B5zIKa99vcitRGX-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 10
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: RCwyJs35QzVV6y1EmQFb-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 10
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: H8Fv6UmGcj9y3Bb9TVF9-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 10
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: qmFm7B5zIKa99vcitRGX-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 20
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: RCwyJs35QzVV6y1EmQFb-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 20
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: POST
                              - name: apikey
                                string_match:
                                  exact: H8Fv6UmGcj9y3Bb9TVF9-p
                            path: /pets
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 20
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: qmFm7B5zIKa99vcitRGX-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 30
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: RCwyJs35QzVV6y1EmQFb-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 30
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: GET
                              - name: apikey
                                string_match:
                                  exact: H8Fv6UmGcj9y3Bb9TVF9-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 30
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: qmFm7B5zIKa99vcitRGX-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 40
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: RCwyJs35QzVV6y1EmQFb-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 40
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: PUT
                              - name: apikey
                                string_match:
                                  exact: H8Fv6UmGcj9y3Bb9TVF9-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 40
                                fill_interval: 60s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: qmFm7B5zIKa99vcitRGX-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 50
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: RCwyJs35QzVV6y1EmQFb-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 50
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  exact: DELETE
                              - name: apikey
                                string_match:
                                  exact: H8Fv6UmGcj9y3Bb9TVF9-p
                            safe_regex:
                              google_re2: null
                              regex: "\"^/pets(?:\\/[^/]+){1}$\""
                          route:
                            cluster: main-cluster
                          typed_per_filter_config:
                            envoy.filters.http.local_ratelimit:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                              stat_prefix: route_rate_limit
                              token_bucket:
                                max_tokens: 50
                                fill_interval: 1s
                              filter_enabled:
                                runtime_key: route_limit_enabled
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                              filter_enforced:
                                runtime_key: route_limit_enforced
                                default_value:
                                  numerator: 100
                                  denominator: HUNDRED
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(GET|POST)$\""
                              - name: apikey
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(7B5zIqmRGXmrJTFmKa99-b|QzVV6y1EmQFbbxOfRCwy-b|mGcjH8Fv6U9y3BVF9H3Y-b|qmFm7B5zIKa99vcitRGX-p|RCwyJs35QzVV6y1EmQFb-p|H8Fv6UmGcj9y3Bb9TVF9-p)$\""
                            path: /open-endpoint
                          route:
                            cluster: main-cluster
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(GET|POST)$\""
                              - name: apikey
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(7B5zIqmRGXmrJTFmKa99-b|QzVV6y1EmQFbbxOfRCwy-b|mGcjH8Fv6U9y3BVF9H3Y-b|qmFm7B5zIKa99vcitRGX-p|RCwyJs35QzVV6y1EmQFb-p|H8Fv6UmGcj9y3Bb9TVF9-p)$\""
                            path: /open-endpoint
                          route:
                            cluster: main-cluster
                        - match:
                            headers:
                              - name: ":method"
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(GET)$\""
                              - name: apikey
                                string_match:
                                  safe_regex:
                                    google_re2: null
                                    regex: "\"^(7B5zIqmRGXmrJTFmKa99-b|QzVV6y1EmQFbbxOfRCwy-b|mGcjH8Fv6U9y3BVF9H3Y-b|qmFm7B5zIKa99vcitRGX-p|RCwyJs35QzVV6y1EmQFb-p|H8Fv6UmGcj9y3Bb9TVF9-p)$\""
                            safe_regex:
                              google_re2: null
                              regex: "\"^/open-endpoint(?:\\/[^/]+){2}$\""
                          route:
                            cluster: main-cluster
  clusters:
    - name: main-cluster
      type: STRICT_DNS
      load_assignment:
        cluster_name: main-cluster
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: api
                      port_value: "9999"
